--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "php": ">=7.1.0",
         "yiisoft/yii2": "~2.0.14",
-        "irfankurniawan/elastic-apm-agent-v2": "1.0.1"
+        "irfankurniawan/elastic-apm-agent-v2": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
